--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>es.marco</groupId>
-    <artifactId>Slider</artifactId>
+    <artifactId>TablaJavafxml</artifactId>
     <version>1.0-SNAPSHOT</version>
     <!--modificio para fatjar-->
     <packaging>jar</packaging>
